--- a/nyq-po/audacity.pot
+++ b/nyq-po/audacity.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: audacity 2.2.2\n"
 "Report-Msgid-Bugs-To: audacity-translation@lists.sourceforge.net\n"
-"POT-Creation-Date: 2018-03-02 15:12-0500\n"
+"POT-Creation-Date: 2018-03-08 16:40-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1003,7 +1003,7 @@ msgstr ""
 #, lisp-format
 msgid ""
 "If used, 'Optional rhythm track duration' must be \n"
-"entered as either one number (seconds0, or two \n"
+"entered as either one number (seconds), or two \n"
 "numbers (minutes seconds) separated by a space.\n"
 "Use whole numbers only.~%"
 msgstr ""
@@ -1625,7 +1625,7 @@ msgstr ""
 
 #: plug-ins/vocalrediso.ny
 msgid ""
-" - Although the Track is stereo, the field  is obviously extra wide.\n"
+" - Although the Track is stereo, the field is obviously extra wide.\n"
 "   This can cause strange effects.\n"
 "   Especially when played by only one speaker."
 msgstr ""
