Fix typos in the French translation

--- a/locale/fr.po
+++ b/locale/fr.po
@@ -763,7 +763,7 @@ msgstr ""
 "Le premier fichier manquant détecté est :\n"
 "%s\n"
 "Il pourrait y avoir d’autres fichiers manquants.\n"
-"Choisissez Aide > Diagnostiques > Vérifier les fichiers associés pour voir "
+"Choisissez Aide > Diagnostics > Vérifier les fichiers associés pour voir "
 "une liste des emplacements des fichiers manquants."
 
 #: src/AudacityApp.cpp
@@ -3777,7 +3777,7 @@ msgstr "&Lancer le test de performance…"
 
 #: src/Menus.cpp
 msgid "&Diagnostics"
-msgstr "&Diagnostiques"
+msgstr "&Diagnostics"
 
 #: src/Menus.cpp
 msgid "Au&dio Device Info..."
@@ -10532,7 +10532,7 @@ msgstr ""
 "Vous essayez d’écraser un fichier associé qui est manquant.\n"
 "               Le fichier ne peut pas être inscrit car le chemin est "
 "nécessaire pour restaurer l’audio originelle dans le projet.\n"
-"               Choisissez Aide > Diagnostiques > Vérifier les Dépendances "
+"               Choisissez Aide > Diagnostics > Vérifier les Dépendances "
 "pour voir les emplacements de tous les fichiers manquants.\n"
 "               Si vous souhaitez toujours exporter, veuillez choisir un nom "
 "de répertoire ou de fichier différent."
@@ -12185,7 +12185,7 @@ msgstr ""
 "presque instantanément.  Ceci est toutefois moins sûr que de les copier "
 "puisque vous devrez retenir les fichiers ainsi que leurs noms et leurs  "
 "emplacements originaux.\n"
-"Aide > Diagnostiques > Vérifier les fichiers associés affichera les noms et "
+"Aide > Diagnostics > Vérifier les fichiers associés affichera les noms et "
 "emplacements originaux de tous les fichiers lus directement .\n"
 "\n"
 "De quelle manière souhaitez-vous importer le (s) fichier(s) ?"
