--- a/locale/audacity.pot
+++ b/locale/audacity.pot
@@ -10727,8 +10727,8 @@ msgstr ""
 msgid "Program"
 msgstr ""
 
-#. i18n-hint: Vamp is the porper name of a software protocol for sound analysis.
-#. It is not an abbreviation for anything.  see http://vamp-plugins.org
+#. i18n-hint: Vamp is the proper name of a software protocol for sound analysis.
+#. It is not an abbreviation for anything.  See http://vamp-plugins.org
 #: src/effects/vamp/VampEffect.h
 msgid "Vamp"
 msgstr ""
