--- a/locale/fr.po
+++ b/locale/fr.po
@@ -19,10 +19,9 @@ msgstr ""
 "Project-Id-Version: Audacity\n"
 "Report-Msgid-Bugs-To: audacity-translation@lists.sourceforge.net\n"
 "POT-Creation-Date: 2018-08-30 12:04+0100\n"
-"PO-Revision-Date: 2018-08-30 18:05+0100\n"
+"PO-Revision-Date: 2018-08-30 19:54+0100\n"
 "Last-Translator: Olivier Humbert (trebmuh/olinuxx) <trebmuh@tuxfamily.org>\n"
-"Language-Team: French (http://www.transifex.com/projects/p/audacity/language/"
-"fr/)\n"
+"Language-Team: French\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17332,13 +17331,13 @@ msgid "~aPercentage values cannot be more than 1000 %."
 msgstr "~aLes valeurs de pourcentage ne peuvent pas être à plus de 1000 %."
 
 #: plug-ins/adjustable-fade.ny
-#, fuzzy, lisp-format
+#, lisp-format
 msgid ""
 "~adB values cannot be more than +100 dB.~%~%~\n"
 "                                 Hint: 6 dB doubles the amplitude~%~\n"
 "                                 t-6 dB halves the amplitude."
 msgstr ""
-"~aLes valeurs dB ne peuvent pas être à plus de +100 dB.~%~%~\n"
+"~aLes valeurs ne peuvent pas être à plus de +100 dB.~%~%~\n"
 "                                 Astuce : 6 dB double l’amplitude~%~\n"
 "                                 t-6 dB divise l’amplitude par deux."
 
